--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
 	"login": {
-		"account": "Account", 
-		"password": "Password", 
+		"account": "User", 
+		"password": "Pass", 
 		"loginBtn": "Login"
 	}
 }
