update translation change ref style in layout

--- a/src/locales/ch/translation.json
+++ b/src/locales/ch/translation.json
@@ -5,7 +5,7 @@
 		"loginBtn": "登入"
 	}, 
 	"global": {
-		"siteName": "海聯 no 簡章系統", 
+		"siteName": "海聯の簡章系統", 
 		"logoutBtn": "登出"
 	}, 
 	"index": {
