--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -5,7 +5,7 @@
 		"loginBtn": "Login"
 	}, 
 	"global": {
-		"siteName": "0verseas no 簡章系統", 
+		"siteName": "0verseas の簡章 system", 
 		"logoutBtn": "Logout"
 	}, 
 	"index": {
