add modal for edting school user

--- a/src/locales/ch/translation.json
+++ b/src/locales/ch/translation.json
@@ -26,6 +26,7 @@
 		}, 
 		"addSchoolUserModal": {
 			"addUser": "新增承辦人員", 
+			"editUser": "編輯承辦人員", 
 			"school": "學校", 
 			"cname": "中文姓名", 
 			"ename": "英文姓名", 
