--- a/src/locales/dev/translation.json
+++ b/src/locales/dev/translation.json
@@ -1,62 +1,63 @@
 {
 	"login": {
-		"account": "帳號", 
-		"password": "密碼", 
+		"account": "帳號",
+		"password": "密碼",
 		"loginBtn": "登入"
-	}, 
+	},
 	"global": {
-		"siteName": "海聯 no 簡章系統", 
-		"logoutBtn": "登出", 
-		"saveBtn": "儲存", 
+		"siteName": "海聯 no 簡章系統",
+		"logoutBtn": "登出",
+		"saveBtn": "儲存",
 		"resetBtn": "重設"
-	}, 
+	},
 	"index": {
-		"schoolAccountSetting": "學校帳戶設定", 
-		"formSurvey": "簡章調查", 
-		"personalInfo": "個人申請資料下載、審核與回覆", 
-		"download": "下載當年度錄取學生資料", 
-		"history": "查詢歷年錄取學生資料", 
+		"schoolAccountSetting": "學校帳戶設定",
+		"formSurvey": "簡章調查",
+		"personalInfo": "個人申請資料下載、審核與回覆",
+		"download": "下載當年度錄取學生資料",
+		"history": "查詢歷年錄取學生資料",
 		"singUp": "教育展報名系統"
-	}, 
+	},
 	"regulation": {
 		"title": {
-			"schoolForm": "學校資料設定", 
-			"deptForm": "系所資料設定"	
-		}, 
+			"schoolForm": "學校資料設定",
+			"deptForm": "系所資料設定"
+		},
 		"schoolForm": {
-			"code": "學校代碼", 
-			"type": "類型", 
-			"isSuspend": "是否停招", 
-			"phone": "學校聯絡電話", 
-			"fax": "學校傳真電話", 
-			"url": "學校網站網址", 
-			"systems": "學制資料", 
-			"scholarshipUrl": "僑生專屬獎學金說明網址", 
-			"sortOrder": "學校顯示排序", 
-			"fiveYearAllowed": "[中五]我可以招呢", 
-			"fiveYearPrepare": "[中五]我準備招了喔", 
-			"fiveYearConfirmedBy": "[中五]？(school code)", 
-			"fiveYearRule": "[中五]給海聯看的學則", 
-			"approveNo": "自招核定文號", 
+			"code": "學校代碼（不用顯示）",
+			"type": "類型（不用顯示）",
+			"isSuspend": "是否停招（不用顯示）",
+			"phone": "學校聯絡電話",
+			"fax": "學校傳真號碼",
+			"url": "學校網站網址",
+			"systems": "學制資料",
+			"scholarship": "是否提供僑生專屬獎學金",
+			"scholarshipUrl": "僑生專屬獎助學金核發辦法網址",
+			"sortOrder": "學校顯示排序（不用顯示）",
+			"fiveYearAllowed": "貴校是否已依照「入學大學同等學力認定標準」第8條第2項規定於學則內訂定中五生增加其畢業應修學分(至少12學分)，或延長其修業年限。",
+			"fiveYearPrepare": "未來貴校是否考量在期限內(105年10月31日)將前開中五生修業規範納入貴校學則？",
+			"fiveYearConfirmedBy": "確認可招收中五生（不用顯示）",
+			"fiveYearRule": "貴校所訂定之中五生相關規定在學則中的第幾條？",
+			"approveNo": "教育部核定之自招文號",
 			"locale": {
 				"ch": {
-					"title": "學校名稱(中文)", 
-					"address": "學校地址(中文)", 
-					"orgnization": "學校負責僑生事務的承辦單位(中文)", 
-					"scholarshipInfo": "獎學金說明(中文)", 
-					"scholarshipDept": "獎學金負責單位(中文)", 
+					"title": "學校名稱(中文)",
+					"address": "學校地址(中文)",
+					"orgnization": "學校負責僑生事務的承辦單位(中文)",
+					"scholarshipInfo": "僑生專屬獎學金說明(中文)",
+					"scholarshipDept": "僑生專屬獎學金核發單位(中文)",
 					"dormInfo": "宿舍說明(中文)"
-				}, 
+				},
 				"en": {
-					"title": "學校名稱(英文)", 
+					"title": "學校名稱(英文)",
 					"address": "學校地址(英文)",
 					"orgnization": "學校負責僑生事務的承辦單位(英文)",
-					"scholarshipInfo": "獎學金說明(英文)", 
-					"scholarshipDept": "獎學金負責單位(英文)", 
+					"scholarshipInfo": "僑生專屬獎學金說明(英文)",
+					"scholarshipDept": "僑生專屬獎學金核發單位(英文)",
 					"dormInfo": "宿舍說明(英文)"
 				}
 			}
-		}, 
+		},
 		"deptForm": {
 			"addDept": "新增系所"
 		}
