改了一下學校資料調查表單排版; 移除不需顯示的欄位

--- a/src/locales/dev/translation.json
+++ b/src/locales/dev/translation.json
@@ -31,7 +31,7 @@
 			"fax": "學校傳真號碼",
 			"url": "學校網站網址",
 			"systems": "學制資料",
-			"scholarship": "是否提供僑生專屬獎學金",
+			"isScholarship": "是否提供僑生專屬獎學金",
 			"scholarshipUrl": "僑生專屬獎助學金核發辦法網址",
 			"sortOrder": "學校顯示排序（不用顯示）",
 			"fiveYearAllowed": "貴校是否已依照「入學大學同等學力認定標準」第8條第2項規定於學則內訂定中五生增加其畢業應修學分(至少12學分)，或延長其修業年限。",
